--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 						
 						<div class="content">
 							<div class="inner">
-								<h1> <a href="https://www.linkedin.com/in/cole-stotland-954a19203/">Cole Stotland</a> </h1>
+								<h1> <a href="https://www.linkedin.com/in/cole-stotland-954a19203/">Jordan Shulman</a> </h1>
 								<p>A passionate, determined, and hard working aspiring engineer. </a> </p>
 							</div>
 						</div>
