--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Cole Stotland's Online Portfolio</title>
+		<title>Jordan Shulman's Online Portfolio</title>
 		<link rel="icon" type="image/png" href="images/newLogoFull2.png"/>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -106,8 +106,8 @@
 							<article id="Contact">
 								<h2 class="major">Contact</h2>
 								<form 
-								method="post" 
-								action="https://formspree.io/f/xknyobee">
+								action="https://formspree.io/f/xoqbvvqb"
+ 								method="POST">
 
 									<div class="fields">
 										<div class="field half">
