--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 						
 						<div class="content">
 							<div class="inner">
-								<h1> <a href="https://www.linkedin.com/in/cole-stotland-954a19203/">Jordan Shulman</a> </h1>
+								<h1> <a href="www.linkedin.com/in/jordan-shulman-9873aa226">Jordan Shulman</a> </h1>
 								<p>A passionate, determined, and hard working aspiring engineer. </a> </p>
 							</div>
 						</div>
@@ -52,7 +52,6 @@
 							<ul>
 								<li><a href="#AboutMe">About Me</a></li>
 								<li><a href="#Resume">Resume</a></li>
-								<li><a href="#Projects">Projects</a></li>
 								<li><a href="#Contact">Contact</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
@@ -382,7 +381,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p class="copyright"> REACH ME AT: Colestotland10@gmail.com</a></p>
+						<p class="copyright"> REACH ME AT: Jordan@jadin.ca</a></p>
 					</footer>
 
 			</div>
