--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1> <a href="www.linkedin.com/in/jordan-shulman-9873aa226">Jordan Shulman</a> </h1>
-								<p>A passionate, determined, and hard working aspiring engineer. </a> </p>
+								<p>A Creative, Hard Working and Passionate Leader. </a> </p>
 							</div>
 						</div>
 						<nav>
